force-app/main/default/objects/Account_Deactivation__c/Account_Deactivation__c.object-meta.xml
<CustomObject>
    <label>Account Deactivation</label>
    <nameField>
        <label>Account Deactivation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Deactivations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>