force-app/main/default/objects/Account_Deactivation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account record that was deactivated.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Deactivations</relationshipLabel>
    <relationshipName>Account_Deactivations</relationshipName>
    <type>Lookup</type>
</CustomField>