force-app/main/default/objects/Account_Deactivation__c/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <label>Deactivation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial – Could not afford services</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with services</fullName>
            </value>
            <value>
                <fullName>Deactivated by WellSpring (safety / noncompliance / scope mismatch)</fullName>
            </value>
            <value>
                <fullName>Goals achieved</fullName>
            </value>
            <value>
                <fullName>Short-term engagement completed</fullName>
            </value>
            <value>
                <fullName>Client resistance to in-home presence</fullName>
            </value>
            <value>
                <fullName>Family feels situation stabilized – no longer needs services</fullName>
            </value>
            <value>
                <fullName>Transitioned to higher level of care (AL / MC / SNF/ Hospice)</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Relocated / moved out of service area</fullName>
            </value>
            <value>
                <fullName>Switched to another provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>