force-app/main/default/objects/Account_Deactivation__c/fields/Deactivation_summary__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_summary__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>