force-app/main/default/objects/Account_Deactivation__c/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <label>Prospect</label>
</RecordType>